test/bad/functions/nested02.px

if true do
    func h(): Void def
        return

h()
